@@ -5,6 +5,10 @@
 	* libosmcomp.ver, libosmcomp.map: Update version info for
 	  previous API removals 
 
+	* include/complib/cl_memory.h, include/complib/cl_memtrack.h,
+	  complib/cl_memory.c, complib/cl_memtrack.c: Remove
+	  deprecated memory allocation related routines
+
 2007-06-13  Yevgeny Kliteynik <kliteyn@dev.mellanox.co.il>
 
 	* include/complib/cl_perf.h, include/complib/cl_async_proc.h,
